INC1-241 fix: cropping 0.4

--- a/src/features/profile/addPhoto/ui/AddPhoto.module.scss
+++ b/src/features/profile/addPhoto/ui/AddPhoto.module.scss
@@ -8,22 +8,6 @@
   }
 }
 
-.croppingTitleWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 60px;
-}
-
-.arrowBack {
-  margin-left: 32px;
-}
-
-.nextBtn {
-  margin-right: 36px;
-  padding: 0;
-}
-
 .addPhotoWrapper {
   position: relative;
 
@@ -33,31 +17,10 @@
 
   height: 502px;
   margin-top: 72px;
-
-  &.photoPreview {
-    margin-top: 0;
-  }
-}
-
-.cropContainer {
-  position: absolute;
-  inset: 0 0 80px;
-
-  width: 100%;
-  height: 100%;
 }
 
 .photoImg {
   margin-bottom: 60px;
-
-  &.photoPreview {
-    width: 100%;
-    height: 100%;
-    margin-bottom: 0;
-    border-radius: 6px;
-
-    object-fit: cover;
-  }
 }
 
 .selectBtn {
@@ -67,3 +30,4 @@
 .draftBtn {
   margin-bottom: 48px;
 }
+
